--- a/test.css
+++ b/test.css
@@ -1,17 +1,3 @@
-section {
-
-	border-style: solid;
-	border-width: 2px;
-	border-color: red;
-}
-
-div {
-
-	border-style: solid;
-	border-width: 1px;
-	border-color: blue;
-}
-
 body{
 	width:50%;
 	margin:auto;
@@ -19,16 +5,18 @@ body{
 
 #wrapper {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: .9fr 2fr;
     grid-gap: 3px;
 }
+#wrapper-left{
+	background: #FFF81B;
+}
  header .avatar {
-    display: block;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 2em auto;
-    width: 8em;
+    width: 9em;
 }
 
 .photo.avatar img{
