--- a/test.css
+++ b/test.css
@@ -144,9 +144,6 @@ body {
     padding: 0;
     margin-left:.7em;
 }
-.social ul li:nth-child(1) a{
-    color:;
-}
 
 .social li a{
     color:#262626;
@@ -186,26 +183,28 @@ body {
 .social li a i{
     margin-top:.05em;
 }
-.social ul li:nth-child(1) a{
+.social li a i:hover{
+    color: #fff;
+}
+
+.social ul li:nth-child(1) a:hover{
     background: #1ab7ea;
 }
-.social ul li:nth-child(2) a{
+.social ul li:nth-child(2) a:hover{
     background: #55acee;
 }
-.social ul li:nth-child(3) a{
+.social ul li:nth-child(3) a:hover{
     background: #0077B5;
 }
-.social ul li:nth-child(4) a{
+.social ul li:nth-child(4) a:hover{
     background: #02b875;
 }
-.social ul li:nth-child(5) a{
+.social ul li:nth-child(5) a:hover{
     background: #3aaf85;
 }
-.social ul li:nth-child(6) a{
-    background: #ff3300:;
+.social ul li:nth-child(6) a:hover{
+    background: #ff3300;
 }
-
-
 
 .hobbies{
     width: 13em;
