--- a/test.css
+++ b/test.css
@@ -9,6 +9,8 @@ body {
     grid-gap: 3px;
 }
 
+/* Css Styling of the left Section of the CV - Profile Photo, Contact, About Me and Hobbies */
+
 .wrapper-left {
     display: grid;
     grid-template-rows: .7fr .9fr auto .4fr;
@@ -16,25 +18,8 @@ body {
     background: #ffbf1c;
 }
 
-.wrapper-right {
-    display: grid;
-    grid-template-rows: 1.25fr 1.25fr 1.25fr .5fr;
-    grid-gap: 3px;
-}
-
-.introduction {
-    display: grid;
-    grid-template-columns: 1.5fr 2fr;
-    grid-gap: 3px;
-}
-
-.content {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    grid-template-rows: auto auto;
-    grid-gap: 3px;
-}
-
+/* CSS Styling of the Profile Photo Section of the CV */
+ 
  header .avatar {
     display: flex;
     justify-content: center;
@@ -48,6 +33,83 @@ body {
     display: block;
     width: 100%;
 }
+
+/* CSS Styling of the Contact Section of the CV */
+
+/* new Class is used in toggleClass - Jquery */
+.new{
+    background-color: #FFF !important;
+    transform: scale(1.1) rotateX(360deg)translate(.8em, 0);
+    transition: .5s ease-in;
+
+}
+
+.info ul {
+    margin: 0;
+    display:grid;
+    grid-template-rows:1fr 1fr 1fr 1fr;
+    overflow: hidden; 
+}
+
+/*The icons are placed on Contact section*/
+.info ul li.ad {
+    background-image:url(images/icons/icn-ad.gif);
+   }
+
+.info ul li.mail {
+    background-image:url(images/icons/icn-mail.gif);
+    }
+
+.info ul li.tel {
+    background-image:url(images/icons/icn-tel.gif);
+}
+
+.info ul li.web {
+    background-image:url(images/icons/icn-web.gif);
+}
+
+.info ul li.web {
+    background-image:;
+}
+
+.info ul li {
+    font-weight:bold;
+    background-color: orange;
+    background-repeat: no-repeat;
+    padding:.5em 0 0 3.25em;
+    background-position: .7em .8em;
+    display:block;
+    margin: .5em 0 0 0;
+    height:3em;
+    width:100%;
+}
+
+/* CSS Styling of the Hobbies Section of the CV */
+
+.hobbies{
+    width: 13em;
+    height: auto;
+    margin:1em auto;
+    display: grid;
+    grid-template-columns:2fr 2fr 2fr;
+    grid-gap: 10px;  
+}
+
+.swim,.cycling,.table-tennis {
+    border-radius: 100%;
+    padding: .2em .2em;
+}
+
+.swim img,.cycling img,.table-tennis img{
+    display:block;
+    width: 100%;
+    height: auto;
+}
+
+
+/* CSS Styling of the banners "Contact" "About Me" Hobbies" along with transition */
+
+
 .left-banner{
     position: relative;
     text-align: center;
@@ -79,7 +141,21 @@ body {
     background-position: 50000%;
   }  
 }
+ 
+/* Css Styling of the Right Section of the CV - Self, Social, Education ,Experience and Reference */
 
+.wrapper-right {
+    display: grid;
+    grid-template-rows: 1.25fr 1.25fr 1.25fr .5fr;
+    grid-gap: 3px;
+}
+
+/* Css Styling of the Right Section of the CV - Section Self */
+.introduction {
+    display: grid;
+    grid-template-columns: 1.5fr 2fr;
+    grid-gap: 3px;
+}
 .self{
    display:flex;
    justify-content: flex-start;
@@ -99,51 +175,7 @@ body {
    font-size: 1em;
  }
 
-.new{
-    background-color: #FFF !important;
-    transform: scale(1.1) rotateX(360deg)translate(.8em, 0);
-    transition: .5s ease-in;
-
-}
-.info ul {
-    margin: 0;
-    display:grid;
-    grid-template-rows:1fr 1fr 1fr 1fr;
-    overflow: hidden; 
-}
-.info ul li.ad {
-    background-image:url(images/icons/icn-ad.gif);
-   }
-
-.info ul li.mail {
-    background-image:url(images/icons/icn-mail.gif);
-    }
-
-.info ul li.tel {
-    background-image:url(images/icons/icn-tel.gif);
-}
-
-.info ul li.web {
-    background-image:url(images/icons/icn-web.gif);
-}
-
-.info ul li.web {
-    background-image:;
-}
-.info ul li {
-    font-weight:bold;
-    background-color: orange;
-    background-repeat: no-repeat;
-    padding:.5em 0 0 3.25em;
-    background-position: .7em .8em;
-    display:block;
-    margin: .5em 0 0 0;
-    height:3em;
-    width:100%;
-}
-
-
-
+/* Css Styling of the Right Section of the CV - Section Social */
 
 .social ul {
     list-style: none;
@@ -163,7 +195,7 @@ body {
 
 .social li a{
     color:#262626;
-    background: #ffbf1c;
+    background-color: rgba(255,191,28,.8);
     width:2.3em;
     height:2.3em;
     display:block;
@@ -228,23 +260,11 @@ body {
     background: #ff3300;
 }
 
-.hobbies{
-    width: 13em;
-    height: auto;
-    margin:1em auto;
+/* Css Styling of the Right Section of the CV - Section Education and Experience */
+
+.content {
     display: grid;
-    grid-template-columns:2fr 2fr 2fr;
-    grid-gap: 10px;  
+    grid-template-columns: 2fr 3fr;
+    grid-template-rows: auto auto;
+    grid-gap: 3px;
 }
-
-.swim,.cycling,.table-tennis {
-    border-radius: 100%;
-    padding: .2em .2em;
-}
-
-.swim img,.cycling img,.table-tennis img{
-    display:block;
-    width: 100%;
-    height: auto;
-}
-
