--- a/test.css
+++ b/test.css
@@ -93,17 +93,19 @@ body {
 /* CSS Styling of the Hobbies Section of the CV */
 
 .hobbies{
-    width: 13em;
-    height: auto;
+    position: relative;
+    width: 80%;
     margin:1em auto;
     display: grid;
     grid-template-columns:2fr 2fr 2fr;
-    grid-gap: 10px;  
+    grid-gap: .5em;  
 }
 
 .swim,.cycling,.table-tennis {
+    
+    border: solid .15em #333;
     border-radius: 100%;
-    padding: .2em .2em;
+    padding: .5em .5em;
 }
 
 .swim img,.cycling img,.table-tennis img{
