--- a/test.css
+++ b/test.css
@@ -90,29 +90,110 @@ body {
     width:100%;
 }
 
+.info ul li:hover {
+    background-color: rgba(0,0,0,.05);
+}
+
+
+
 /* CSS Styling of the Hobbies Section of the CV */
+
+footer {
+    background: rgb(255,165,0); 
+}
 
 .hobbies{
     position: relative;
     width: 80%;
-    margin:1em auto;
+    margin: 1em auto;
     display: grid;
-    grid-template-columns:2fr 2fr 2fr;
-    grid-gap: .5em;  
+    grid-template-columns: 2fr 2fr 2fr; 
+    grid-gap: .5em;
 }
 
 .swim,.cycling,.table-tennis {
     
-    border: solid .15em #333;
+    border: solid .19em #333;
     border-radius: 100%;
-    padding: .5em .5em;
+    padding: .6em .6em;
 }
 
-.swim img,.cycling img,.table-tennis img{
+/* new Class is used in toggleClass - Jquery . The background color of "footer" is changed on click*/
+
+.new-footer {
+   background: rgb(0,0,0,.5);
+   transition: 1s;
+}
+
+/* new Class is used in toggleClass - Jquery . The stylings of hobby icons are changed on click*/
+
+.new-hobbies {
+    background: #ffee10;
+    transform: scale(1.15,1.15) rotateY(540deg);
+    transition: all 1s ease-in;
+    border: solid .2em #333;
+    box-shadow: (0 0 1em #ffee10);
+    text-shadow: (0 0 1em #ffee10);
+    border-radius: 100%;
+}
+
+.swim img,.cycling img,.table-tennis img {
     display:block;
     width: 100%;
     height: auto;
 }
+
+/*
+.swim::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffee10;
+    border-radius: 100%;
+    transition: .5s;
+    }
+.cycling::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffee10;
+    border-radius: 100%;
+    transition: .5s;
+    }
+
+  .table-tennis::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffee10;
+    border-radius: 100%;
+    transition: .5s;
+    }
+    /*.swim:hover:before {
+     transform: scale(1.1);
+     box-shadow: (0 0 1em #ffee10);
+     display: block;
+    }
+    .cycling:hover:before {
+     transform: scale(1.1);
+     box-shadow: (0 0 1em #ffee10);
+     display: block;
+    }
+    .table-tennis:hover:before {
+     transform: scale(1.1);
+     box-shadow: (0 0 1em #ffee10);
+     display: block;
+    }*/
 
 
 /* CSS Styling of the banners "Contact" "About Me" Hobbies" along with Animation */
@@ -209,7 +290,7 @@ body {
 /*Basic Styling of the Social buttons */
 
 .social li a{
-    color:#262626;
+    color:rgba(38, 38, 38,.85);
     background-color: rgba(255,191,28,.8);
     width:2.3em;
     height:2.3em;
@@ -226,7 +307,7 @@ body {
 /*Creating styles  of the Social buttons on HOVER*/
 
 .social li a:hover{
-    transition: .5s;
+    transition: all .5s ease-out;
     box-shadow: -.9em .9em .9em rgba(0,0,0,.5);
     transform: scale(1.2) rotate(-20deg) skew(2deg) translate(-.3em, -.3em);
 }
