--- a/test.css
+++ b/test.css
@@ -19,6 +19,9 @@ body {
 }
 
 /* CSS Styling of the Profile Photo Section of the CV */
+header .profile{
+    height: 100%;
+}
  
  header .avatar {
     display: flex;
@@ -46,7 +49,7 @@ body {
 }
 
 .reverse{
-    background-color: transparent !important;
+    background-color: orange !important;
     transform: scale(1) rotateX(0deg)translate(0, 0);
     transition: .5s ease-in;
 
@@ -98,11 +101,16 @@ body {
 }
 
 .info ul li:hover {
-    background-color: rgba(0,0,0,.05);
+    background-color: rgba(255,255,255,.05);
 }
+/* CSS Styling of About-Me Section of the CV */
 
-
-
+.about-para{
+   margin: 7.5% 7.5%;
+   text-align: center;
+   font-weight: 500  !important;
+   line-height: 1.4em !important;
+}
 /* CSS Styling of the Hobbies Section of the CV */
 
 footer {
@@ -130,27 +138,7 @@ footer {
 .new-footer {
    background: rgb(0,0,0,.5);
    transition: .5s;
-}
-
-.new-revfooter
-   animation: backgrnd 10s linear;
-}
-
-@keyframes backgrnd 
-{
-  0%
-  {
-    background-color: rgb(0,0,0,.5);
-  } 
-  50%
-  {
-    background-color: rgb(0,0,0,.25);
-  } 
-  100%
-  {
-    background-color: transparent;
-  }  
-}
+   }
 
 
 /* new Class is used in toggleClass - Jquery . The stylings of hobby icons are changed on click*/
@@ -289,8 +277,8 @@ footer {
 }
 .self .self-inner >h1{
     text-transform: uppercase;
-    font-size: 2.5em;
-    font-weight: 400;
+    font-size: 2.7em;
+    font-weight: 500;
     letter-spacing: 1px;
     line-height: 1.5em;
 }
@@ -298,8 +286,14 @@ footer {
     color: #ffbf1c;
 }
  .self-inner .name-2{
-   font-size: 1em;
+   font-size: 1.15em  !important;
+   font-weight: 500  !important;
+   line-height: 1.5em !important;
  }
+
+ .self-inner .name-2 span{
+    text-decoration: underline;
+}
 
 /* Css Styling of the Right Section of the CV - Section Social */
 
