--- a/test.css
+++ b/test.css
@@ -20,8 +20,11 @@ body {
 
 /* CSS Styling of the Profile Photo Section of the CV */
 header .profile{
+    
+    position: relative;
+    width: 100%;
     height: 100%;
-    display: none;
+    margin: auto;
 }
 header .profile>span{
     float:left;
@@ -30,15 +33,16 @@ header .profile>span{
     border-radius: 10%;
     border:solid .4px #000;
     background: url("images/self/ashok9.jpg");
-    background-size: 25%;
+    background-size: 23%;
     background-attachment: fixed;
 
 }
  header .avatar {
+    position:absolute;
     justify-content: center;
     align-items: center;
-    margin: 2em auto;
-    width: 11em;
+    margin: 2% 2% 2% 1%;
+    width: 15%;
 }
 
 .photo.avatar img{
@@ -48,9 +52,12 @@ header .profile>span{
     height:auto;
 }
 
+.display-photo{
+    visibility: visible  !important;
+}
 
 .nodisplay-photo{
-    display: none  !important;
+    visibility: hidden  !important;
 }
 
 /* CSS Styling of the Contact Section of the CV */
@@ -128,7 +135,7 @@ header .profile>span{
 .about-para{
    margin: 7.5% 7.5%;
    text-align: center;
-   font-weight: 500  !important;
+   font-weight: 500  ;
    line-height: 1.4em !important;
 }
 /* CSS Styling of the Hobbies Section of the CV */
@@ -248,11 +255,12 @@ footer {
     font-weight: 500;
     letter-spacing: 1.5px;
     color: #ffdc2a;
+    text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
     line-height: 1.75;
     overflow: hidden;
     background-repeat: no-repeat;
-    background: linear-gradient(90deg, #000, #636362 , #000);
-    animation: animate 5s linear infinite;
+    background: linear-gradient(90deg, #000, #CA870A , #000);
+    animation: animate 3s linear infinite;
 
 }
 
@@ -262,10 +270,19 @@ footer {
   {
     background-position: -50000%;
   } 
+  25%
+  {
+    background-position: _-25000%;
+  }
   50%
   {
     background-position: 0%;
-  } 
+  }
+  
+  75%
+  {
+    background-position: 5000%;
+  }
   100%
   {
     background-position: 50000%;
