--- a/test.css
+++ b/test.css
@@ -13,52 +13,44 @@ body {
 
 .wrapper-left {
     display: grid;
-    grid-template-rows: .7fr .9fr auto .4fr;
-    grid-gap: 3px;
+    grid-template-rows: repeat(4, auto);
     background: #ffbf1c;
 }
 
-/* CSS Styling of the Profile Photo Section of the CV */
+/* CSS Styling of the background Profile Photo Section of the CV */
+
+
 header .profile{
-    
     position: relative;
     width: 100%;
     height: 100%;
     margin: auto;
 }
 header .profile>span{
-    float:left;
+    float: left;
     height: 1em;
-    width: 1em;
-    border-radius: 10%;
-    border:solid .4px #000;
+    width: 1.02em;
+    border-radius: 20%;
+    border: solid .4px #000;
     background: url("assets/images/self/ashok9.jpg");
-    background-size: 23%;
+    background-size: 23.5%;
     background-attachment: fixed;
-
 }
+
+/* CSS Styling of the circled Photo Section of the CV */
+
  header .avatar {
-    position:absolute;
-    justify-content: center;
-    align-items: center;
-    margin: 2% 2% 2% 1%;
-    width: 15%;
+    margin: 2.5% 1% 2% 1.5%;
+    width: 100%;
+    margin: 0 .5% 0 -.5%;
 }
 
 .photo.avatar img{
     border-radius: 50%;
     display: block;
-    width: 100%;
-    height:auto;
-}
-
-.display-photo{
-    visibility: visible  !important;
-}
-
-.nodisplay-photo{
-    visibility: hidden  !important;
-}
+    width: 80%;
+    margin:8% auto;
+    }
 
 /* CSS Styling of the Contact Section of the CV */
 
@@ -79,15 +71,28 @@ header .profile>span{
 }
 
 /* Dividing up the space of "UL" into equal dimension grid rows for "LI" elements*/
-.info{
-    height: 87%;
-}
+
 .info ul {
-    margin: 0;
     height: 100%;
     display:grid;
-    grid-template-rows:1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(5, auto);
     overflow: hidden; 
+}
+
+.info ul li {
+    font-weight: bold;
+    background-color: orange;
+    background-repeat: no-repeat;
+    padding: 2% 0 0 20%;
+    background-position: .7em .8em;
+    display:block;
+    margin: 2% 0;
+    height: 85%;
+    width: 80%;
+}
+
+.info li:hover {
+    background-color: rgba(255,255,255,.05);
 }
 
 /*The icons are placed on Contact section*/
@@ -110,36 +115,62 @@ header .profile>span{
 
 .info ul li.skype {
     background-image:;
-    padding-bottom: 5%;
+    padding-bottom: 2%;
 }
 
-/* Css Styling of the background properties  of "li" elements */
 
-.info ul li {
-    font-weight: bold;
-    background-color: orange;
-    background-repeat: no-repeat;
-    padding: 2% 0 0 20%;
-    background-position: .7em .8em;
-    display:block;
-    margin-top: 1%;
-    height: 80%;
-    width: 80%;
-}
+/*.info{
+    height: 87%;
 
-.info li:hover {
-    background-color: rgba(255,255,255,.05);
-}
+   ul {
+      margin: 0;
+      height: 100%;
+      display:grid;
+      grid-template-rows:1fr 1fr 1fr 1fr;
+      overflow: hidden;
+      }
+
+      li {
+         font-weight: bold;
+         background-color: orange;
+         background-repeat: no-repeat;
+         padding: 2% 0 0 20%;
+         background-position: .7em .8em;
+         display:block;
+         margin-top: 1%;
+         height: 80%;
+         width: 80%;
+
+         :hover {
+              background-color: rgba(255,255,255,.05);
+             }
+
+         .ad {
+              background-image: url(assets/images/icons/icn-ad.gif);
+              }
+        .mail {
+              background-image:url(assets/images/icons/icn-mail.gif);
+              }
+        .tel {
+              background-image:url(assets/images/icons/icn-tel.gif);
+             }
+        .web {
+              background-image:url(assets/images/icons/icn-web.gif);
+             }
+        .skype {
+             background-image:;
+             padding-bottom: 5%;
+            }
+
+        }
+      }
+    } */
+
 /* CSS Styling of About-Me Section of the CV */
 
-/*.block-about-me{
-    display: table-cell;
-    vertical-align: middle;
-}*/
 .about-para{
    margin: 7.5% 7.5%;
    text-align: center;
-   font-weight: 500  ;
    line-height: 1.4em !important;
 }
 /* CSS Styling of the Hobbies Section of the CV */
@@ -149,11 +180,10 @@ footer {
 }
 
 .hobbies{
-    position: relative;
     width: 80%;
-    margin: 1em auto;
+    margin: 5% auto;
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr; 
+    grid-template-columns: repeat(3, auto); 
     grid-gap: 5%;
 }
 
@@ -297,30 +327,36 @@ footer {
 
 .wrapper-right {
     display: grid;
-    grid-template-rows: 1.25fr 1.25fr 1.25fr .5fr;
+    grid-template-columns: 4% auto 4%;
     grid-gap: 3px;
+}
+
+.wrapper-right-inner {
+   grid-column: 2 / 3;
+   display: grid;
+   grid-template-rows: .5fr repeat(3, auto);
+   margin: 0;
 }
 
 /*Dividing the Self Section and Social Section into grids */
 
 .introduction {
     display: grid;
-    grid-template-columns: 1.5fr 2fr;
-    grid-gap: 3px;
+    grid-template-columns: 1.7fr 2fr;
 }
 
 /* Css Styling of the Right Section of the CV - Section Self */
 
 .self{
-   display:flex;
-   justify-content: flex-start;
-   align-items: center;
+   display:grid;
+   justify-self: center;
+   align-self: center;
 }
 .self .self-inner >h1{
     text-transform: uppercase;
     font-size: 2.7em;
     font-weight: 500;
-    letter-spacing: 1px;
+    letter-spacing: .5px;
     line-height: 1.5em;
     color: #ffbf1c;
     display: none;
@@ -331,6 +367,7 @@ footer {
     font-weight: 500;
     letter-spacing: 1px;
     line-height: 1.5em;
+    margin-left: 5%;
     color: #000;
     display: none;
 }
@@ -350,11 +387,50 @@ footer {
 
 /* Positioning and Aligning Social Buttons Vertically */
 
+
+/*Sass nesting code for Social Section 
+
+.social ul {
+    list-style: none;
+    position: relative;
+    top: 5%;
+    margin-left: 7%;
+    padding: 0;
+    display: flex;
+
+    li {
+        list-style: none;
+        padding: 0;
+        margin-left: 7%;
+
+        a {
+            color:rgba(38, 38, 38,.85);
+            background-color: rgba(255,191,28,.8);
+            width: 135%;
+            height: 120%;
+            display:block;
+            text-align: center;
+            transform: rotate(-20deg) skew(2deg);
+            transition: .5s;
+            box-shadow: -.5em .5em .5em rgba(0,0,0,.5);
+
+            i {
+                margin-top:.1em;
+              }
+
+            i:hover{
+                color: #fff;
+              }
+
+            }
+
+
+} */
 .social ul {
    list-style: none;
    position: relative;
    top: 5%;
-   margin-left: 7%;
+   margin-left: 10%;
    padding: 0;
    display: flex;
 }
@@ -362,16 +438,16 @@ footer {
 .social ul li {
     list-style: none;
     padding: 0;
-    margin-left: 7%;
-}
+    margin-left: 5.5%;
+} 
 
 /*Basic Styling of the Social buttons */
 
 .social li a{
     color:rgba(38, 38, 38,.85);
     background-color: rgba(255,191,28,.8);
-    width: 135%;
-    height: 120%;
+    width: 112%;
+    height: 112%;
     display:block;
     text-align: center;
     transform: rotate(-20deg) skew(2deg);
@@ -441,7 +517,7 @@ footer {
     background: #ff3300;
 }
 
-/* Css Styling of the Right Section of the CV - Section Education and Experience */
+/* Css Styling of the Right Section of the CV - Section-Education, Experience and Reference*/
 
 .content {
     display: grid;
@@ -449,3 +525,27 @@ footer {
     grid-template-rows: auto auto;
     grid-gap: 3px;
 }
+
+section>i{
+    color: #ffbf1c;
+    margin-right: 5%;
+}
+
+section>h2{
+    text-transform: uppercase;
+    font-size: 1.4em;
+    font-weight: 500;
+    letter-spacing: .5px;
+    color: #000;
+    line-height: 1.5em;
+}
+
+section>hr { 
+  display: block;
+  margin: 1% auto 5% auto;
+  border-style: solid;
+  border-width: 1.5px;
+  color: #ffbf1c;
+}
+
+/* Css Styling of the Right Section of the CV - Section-Education */
