--- a/test.css
+++ b/test.css
@@ -5,12 +5,14 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-columns: .95fr 2fr;
+    grid-template-columns: 32% 68%;
 }
 
 /* Css Styling of the left Section of the CV - Profile Photo, Contact, About Me and Hobbies */
 
 .wrapper-left {
+    position: fixed;
+    width:230px;
     display: grid;
     grid-template-rows: repeat(4, auto);
     background: #ffbf1c;
@@ -20,29 +22,28 @@ body {
 
 
 header .profile{
-    position: relative;
     width: 100%;
     height: 100%;
-    margin: auto;
 }
 header .profile>span{
     float: left;
-    height: 1em;
-    width: 1.035em;
+    width: 14px;
+    height: 14px;
     border-radius: 20%;
     border: solid .4px #000;
     background: url("assets/images/self/ashok9.jpg");
-    background-size: 23.5%;
-    background-position: 32% 67%;
+    background-size: 330px;
+    background-position: 31% 0;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 /* CSS Styling of the circled Photo Section of the CV */
 
  header .avatar {
     position: absolute;
-    width: 17.25%;
-    padding:.5% 0 .45% 0;
+    width: 100%;
+    padding:8.5% 0 8.5% 0;
     background: #ffbf1c;
 }
 
