--- a/style.css
+++ b/style.css
@@ -1,39 +1,46 @@
 body {
-    width: 55%;
+    width: 100%;
     margin: auto;
 }
 
 .wrapper {
     display: grid;
-    grid-template-columns: 230px 4% auto 4%;
-    height: 100%
+    grid-template-columns: auto 4% auto 4%;
+    height: 100%;
 }
 
 /* Css Styling of the left Section of the CV - Profile Photo, Contact, About Me and Hobbies */
 
 .wrapper-left {
+    position: absolute;
+    width: 70%;
     grid-column: 1/2;
     display: grid;
-    grid-template-rows: repeat(4, auto);
+    grid-template-rows: repeat(5, auto);
     background: #ffbf1c;
+    z-index: 1;
+    display: none;
 }
 
 /* CSS Styling of the background Profile Photo Section of the CV */
 
-
+header{
+    grid-row: 1/2;
+    margin: 8%;
+}
 header .profile{
     width: 100%;
     height: 100%;
 }
 header .profile>span{
     float: left;
-    width: 14px;
-    height: 14px;
-    border-radius: 20%;
+    width: 13px;
+    height: 13px;
+    border-radius: 10%;
     border: solid .4px #000;
     background: url("assets/images/self/ashok9.jpg");
-    background-size: 320px;
-    background-position: 31% 0;
+    background-size: 95%;
+    background-position: 25% 0;
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
@@ -42,8 +49,9 @@ header .profile>span{
 
  header .avatar {
     position: absolute;
-    width: 229px;
-    padding:1.75% 0 1.75% 0;
+    width: 90%;
+    margin:-1% 0 0 -4%;
+    padding: 7% 0;
     background: #ffbf1c;
 }
 
@@ -78,24 +86,29 @@ header .profile>span{
 }
 
 /* Dividing up the space of "UL" into equal dimension grid rows for "LI" elements*/
-
+.info{
+    display: none;
+}
 .info ul {
     height: 100%;
     display:grid;
     grid-template-rows: repeat(5, auto);
     overflow: hidden; 
+    display:none;
 }
 
 .info ul li {
     font-weight: bold;
+    font-size: 1.1em;
     background-color: orange;
     background-repeat: no-repeat;
     padding: 2% 0 0 20%;
-    background-position: .7em .8em;
+    background-position: 1em 1em;
     display:block;
     margin: 2% 0;
     height: 85%;
     width: 80%;
+    display: none;
 }
 
 .info li:hover {
@@ -178,14 +191,20 @@ header .profile>span{
 .about-para{
    margin: 7.5% 7.5%;
    text-align: center;
+   font-size: 1.1em;
    line-height: 1.4em !important;
+   display: none;
 }
 /* CSS Styling of the Hobbies Section of the CV */
 
 footer {
+    grid-row: 4/5;
     background: rgb(255,165,0); 
 }
 
+.hobbies-outer{
+    display: none;
+}
 .hobbies{
     width: 80%;
     margin: 5% auto;
@@ -230,6 +249,102 @@ footer {
     display:block;
     width: 100%;
     height: auto;
+}
+
+.social-1{
+    margin:5% auto;
+}
+
+.social-1 ul {
+   list-style: none;
+   position: relative;
+   margin:auto;
+   padding: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.social-1 ul li {
+    list-style: none;
+    padding: 0;
+    margin-left: 5.5%;
+} 
+
+/*Basic Styling of the Social buttons */
+
+.social-1 li a{
+    color: #ffbf1c;
+    background-color: #CA870A;
+    width: 120%;
+    height: 120%;
+    display:block;
+    text-align: center;
+    transform: rotate(-20deg) skew(2deg);
+    transition: .5s;
+    box-shadow: -.5em .5em .5em rgba(0,0,0,.5);
+}
+
+/*Creating styles  of the Social buttons on HOVER*/
+
+.social-1 li a:hover{
+    transition: all .5s ease-out;
+    box-shadow: -.9em .9em .9em rgba(0,0,0,.5);
+    transform: scale(1.2) rotate(-20deg) skew(2deg) translate(-5%, -5%);
+}
+
+/* Creating the side frames of the Social buttons */
+
+.social-1 li a:before{
+    content: '';
+    position: absolute;
+    background: #b1b1b1;
+    top: .25em;
+    left: -.4em;
+    width: .4em;
+    height: 100%;
+    transform: rotate(0deg) skewY(-45deg);
+    transition: .5s;
+}
+
+.social-1 li a:after{
+    content: '';
+    position: absolute;
+    background: #b1b1b1;
+    bottom: -.3em;
+    left: -.1em;
+    width: 100%;
+    height: .4em;
+    transform: rotate(0deg) skewX(-45deg);
+    transition: .5s;
+}
+.social-1 li a i{
+    margin-top:.1em;
+}
+/*Changing text color of the Social buttons on hover */
+
+.social-1 li a i:hover{
+    color: #fff;
+}
+/*Changing background color of the Social buttons on hover */
+
+.social-1 ul li:nth-child(1) a:hover{
+    background: #1ab7ea;
+}
+.social-1 ul li:nth-child(2) a:hover{
+    background: #55acee;
+}
+.social-1 ul li:nth-child(3) a:hover{
+    background: #0077B5;
+}
+.social-1 ul li:nth-child(4) a:hover{
+    background: #02b875;
+}
+.social-1 ul li:nth-child(5) a:hover{
+    background: #3aaf85;
+}
+.social-1 ul li:nth-child(6) a:hover{
+    background: #ff3300;
 }
 
 /*
@@ -335,14 +450,14 @@ footer {
 .wrapper-right {
     grid-column: 3/4;
     display: grid;
-    grid-template-rows: .5fr repeat(3, auto);
+    grid-template-rows: 25% repeat(3, auto);
 }
 
 /*Dividing the Self Section and Social Section into grids */
 
 .introduction {
     display: grid;
-    grid-template-columns: 1.7fr 2fr;
+    grid-template-columns: auto auto;
 }
 
 /* Css Styling of the Right Section of the CV - Section Self */
@@ -426,6 +541,10 @@ footer {
 
 
 } */
+
+.social{
+    display: none;
+}
 .social ul {
    list-style: none;
    position: relative;
