--- a/style.css
+++ b/style.css
@@ -1,508 +1,218 @@
 body {
-    width: 100%;
-    margin: auto;
-}
+  width: 55%;
+  margin: auto; }
 
 .wrapper {
-    display: grid;
-    grid-template-columns: auto 4% auto 4%;
-    height: 100%;
-}
+  display: grid;
+  grid-template-columns: 230px 4% auto 4%;
+  height: 100%; }
 
 /* Css Styling of the left Section of the CV - Profile Photo, Contact, About Me and Hobbies */
-
 .wrapper-left {
-    position: absolute;
-    width: 70%;
-    grid-column: 1/2;
-    display: grid;
-    grid-template-rows: repeat(5, auto);
-    background: #ffbf1c;
-    z-index: 1;
-    display: none;
-}
+  grid-column: 1/2;
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+  background: #ffbf1c; }
 
 /* CSS Styling of the background Profile Photo Section of the CV */
+header .profile {
+  width: 100%;
+  height: 100%; }
 
-header{
-    grid-row: 1/2;
-    margin: 8%;
-}
-header .profile{
-    width: 100%;
-    height: 100%;
-}
-header .profile>span{
-    float: left;
-    width: 13px;
-    height: 13px;
-    border-radius: 10%;
-    border: solid .4px #000;
-    background: url("assets/images/self/ashok9.jpg");
-    background-size: 95%;
-    background-position: 25% 0;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-}
+header .profile > span {
+  float: left;
+  width: 13.7px;
+  height: 13.7px;
+  border-radius: 20%;
+  border: solid .4px #000;
+  background: url("assets/images/self/ashok9.jpg");
+  background-size: 320px;
+  background-position: 31% 0;
+  background-attachment: fixed;
+  background-repeat: no-repeat; }
 
 /* CSS Styling of the circled Photo Section of the CV */
+header .avatar {
+  position: absolute;
+  width: 229px;
+  padding: 1.75% 0 1.75% 0;
+  background: #ffbf1c; }
 
- header .avatar {
-    position: absolute;
-    width: 90%;
-    margin:-1% 0 0 -4%;
-    padding: 7% 0;
-    background: #ffbf1c;
-}
+.photo.avatar img {
+  border-radius: 50%;
+  display: block;
+  width: 80%;
+  margin: 8% auto; }
 
-.photo.avatar img{
-    border-radius: 50%;
-    display: block;
-    width: 80%;
-    margin:8% auto;
-    }
-
-.avtoggle{
-    opacity: 0;
-    transition-duration : .1s;
-}
+.avtoggle {
+  opacity: 0;
+  transition-duration: .1s; }
 
 /* CSS Styling of the Contact Section of the CV */
-
 /* new Class is used in toggleClass - Jquery . The styling of "li" is changed on click*/
+.new {
+  background-color: #FFF !important;
+  transform: scale(1.1) rotateX(360deg) translate(5%, 0);
+  transition: .5s ease-in; }
 
-.new{
-    background-color: #FFF !important;
-    transform: scale(1.1) rotateX(360deg)translate(5%, 0);
-    transition: .5s ease-in;
-
-}
-
-.reverse{
-    background-color: orange !important;
-    transform: scale(1) rotateX(0deg)translate(0, 0);
-    transition: .5s ease-in;
-
-}
+.reverse {
+  background-color: orange !important;
+  transform: scale(1) rotateX(0deg) translate(0, 0);
+  transition: .5s ease-in; }
 
 /* Dividing up the space of "UL" into equal dimension grid rows for "LI" elements*/
-.info{
-    display: none;
-}
-.info ul {
+.info {
+  height: 87%; }
+  .info ul {
+    margin: 0;
     height: 100%;
-    display:grid;
-    grid-template-rows: repeat(5, auto);
-    overflow: hidden; 
-    display:none;
-}
-
-.info ul li {
-    font-weight: bold;
-    font-size: 1.1em;
-    background-color: orange;
-    background-repeat: no-repeat;
-    padding: 2% 0 0 20%;
-    background-position: 1em 1em;
-    display:block;
-    margin: 2% 0;
-    height: 85%;
-    width: 80%;
-    display: none;
-}
-
-.info li:hover {
-    background-color: rgba(255,255,255,.05);
-}
-
-/*The icons are placed on Contact section*/
-
-.info ul li.ad {
-    background-image: url(assets/images/icons/icn-ad.gif);
-   }
-
-.info ul li.mail {
-    background-image:url(assets/images/icons/icn-mail.gif);
-    }
-
-.info ul li.tel {
-    background-image:url(assets/images/icons/icn-tel.gif);
-}
-
-.info ul li.web {
-    background-image:url(assets/images/icons/icn-web.gif);
-}
-
-.info ul li.skype {
-    background-image:;
-    padding-bottom: 2%;
-}
-
-
-/*.info{
-    height: 87%;
-
-   ul {
-      margin: 0;
-      height: 100%;
-      display:grid;
-      grid-template-rows:1fr 1fr 1fr 1fr;
-      overflow: hidden;
-      }
-
-      li {
-         font-weight: bold;
-         background-color: orange;
-         background-repeat: no-repeat;
-         padding: 2% 0 0 20%;
-         background-position: .7em .8em;
-         display:block;
-         margin-top: 1%;
-         height: 80%;
-         width: 80%;
-
-         :hover {
-              background-color: rgba(255,255,255,.05);
-             }
-
-         .ad {
-              background-image: url(assets/images/icons/icn-ad.gif);
-              }
-        .mail {
-              background-image:url(assets/images/icons/icn-mail.gif);
-              }
-        .tel {
-              background-image:url(assets/images/icons/icn-tel.gif);
-             }
-        .web {
-              background-image:url(assets/images/icons/icn-web.gif);
-             }
-        .skype {
-             background-image:;
-             padding-bottom: 5%;
-            }
-
-        }
-      }
-    } */
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    overflow: hidden; }
+    .info ul li {
+      font-weight: bold;
+      background-color: orange;
+      background-repeat: no-repeat;
+      padding: 2% 0 0 20%;
+      background-position: .7em .8em;
+      display: block;
+      margin-top: 1%;
+      height: 80%;
+      width: 80%; }
+      .info ul li:hover {
+        background-color: rgba(255, 255, 255, 0.05); }
+      .info ul li .ad {
+        background-image: url(/assets/images/icons/icn-ad.gif); }
+      .info ul li .mail {
+        background-image: url(/assets/images/icons/icn-mail.gif); }
+      .info ul li .tel {
+        background-image: url(/assets/images/icons/icn-tel.gif); }
+      .info ul li .web {
+        background-image: url(/assets/images/icons/icn-web.gif); }
+      .info ul li .skype {
+        padding-bottom: 5%; }
 
 /* CSS Styling of About-Me Section of the CV */
+.about-para {
+  margin: 7.5% 7.5%;
+  text-align: center;
+  line-height: 1.4em !important; }
 
-.about-para{
-   margin: 7.5% 7.5%;
-   text-align: center;
-   font-size: 1.1em;
-   line-height: 1.4em !important;
-   display: none;
-}
 /* CSS Styling of the Hobbies Section of the CV */
-
 footer {
-    grid-row: 4/5;
-    background: rgb(255,165,0); 
-}
+  background: orange; }
 
-.hobbies-outer{
-    display: none;
-}
-.hobbies{
-    width: 80%;
-    margin: 5% auto;
-    display: grid;
-    grid-template-columns: repeat(3, auto); 
-    grid-gap: 5%;
-}
+.hobbies {
+  width: 80%;
+  margin: 5% auto;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 5%; }
 
-.swim,.cycling,.table-tennis {
-    
-    border: solid .19em #333;
-    border-radius: 100%;
-    padding: 12% 12%;
-}
+.swim, .cycling, .table-tennis {
+  border: solid .19em #333;
+  border-radius: 100%;
+  padding: 12% 12%; }
 
 /* new Class is used in toggleClass - Jquery . The background color of "footer" is changed on click*/
-
 .new-footer {
-   background: rgb(0,0,0,.5);
-   transition: .5s;
-   }
-
+  background: rgba(0, 0, 0, 0.5);
+  transition: .5s; }
 
 /* new Class is used in toggleClass - Jquery . The stylings of hobby icons are changed on click*/
-
 .new-hobbies {
-    background: #ffee10;
-    transform: scale(1.3) rotateY(540deg);
-    transition: all 2s ease-in;
-    border: solid .21em #333;
-    box-shadow: (0 0 1em #ffee10);
-    text-shadow: (0 0 1em #ffee10);
-    border-radius: 100%;
-}
+  background: #ffee10;
+  transform: scale(1.3) rotateY(540deg);
+  transition: all 2s ease-in;
+  border: solid .21em #333;
+  box-shadow: 0 0 1em #ffee10;
+  text-shadow: 0 0 1em #ffee10;
+  border-radius: 100%; }
+
 .reverse-hobbies {
-    background: transparent;
-    transform: scale(1) rotateY(0deg);
-    transition: all 2s ease-in;
-}
+  background: transparent;
+  transform: scale(1) rotateY(0deg);
+  transition: all 2s ease-in; }
 
-.swim img,.cycling img,.table-tennis img {
-    display:block;
-    width: 100%;
-    height: auto;
-}
-
-.social-1{
-    margin:5% auto;
-}
-
-.social-1 ul {
-   list-style: none;
-   position: relative;
-   margin:auto;
-   padding: 0;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-
-.social-1 ul li {
-    list-style: none;
-    padding: 0;
-    margin-left: 5.5%;
-} 
-
-/*Basic Styling of the Social buttons */
-
-.social-1 li a{
-    color: #ffbf1c;
-    background-color: #CA870A;
-    width: 120%;
-    height: 120%;
-    display:block;
-    text-align: center;
-    transform: rotate(-20deg) skew(2deg);
-    transition: .5s;
-    box-shadow: -.5em .5em .5em rgba(0,0,0,.5);
-}
-
-/*Creating styles  of the Social buttons on HOVER*/
-
-.social-1 li a:hover{
-    transition: all .5s ease-out;
-    box-shadow: -.9em .9em .9em rgba(0,0,0,.5);
-    transform: scale(1.2) rotate(-20deg) skew(2deg) translate(-5%, -5%);
-}
-
-/* Creating the side frames of the Social buttons */
-
-.social-1 li a:before{
-    content: '';
-    position: absolute;
-    background: #b1b1b1;
-    top: .25em;
-    left: -.4em;
-    width: .4em;
-    height: 100%;
-    transform: rotate(0deg) skewY(-45deg);
-    transition: .5s;
-}
-
-.social-1 li a:after{
-    content: '';
-    position: absolute;
-    background: #b1b1b1;
-    bottom: -.3em;
-    left: -.1em;
-    width: 100%;
-    height: .4em;
-    transform: rotate(0deg) skewX(-45deg);
-    transition: .5s;
-}
-.social-1 li a i{
-    margin-top:.1em;
-}
-/*Changing text color of the Social buttons on hover */
-
-.social-1 li a i:hover{
-    color: #fff;
-}
-/*Changing background color of the Social buttons on hover */
-
-.social-1 ul li:nth-child(1) a:hover{
-    background: #1ab7ea;
-}
-.social-1 ul li:nth-child(2) a:hover{
-    background: #55acee;
-}
-.social-1 ul li:nth-child(3) a:hover{
-    background: #0077B5;
-}
-.social-1 ul li:nth-child(4) a:hover{
-    background: #02b875;
-}
-.social-1 ul li:nth-child(5) a:hover{
-    background: #3aaf85;
-}
-.social-1 ul li:nth-child(6) a:hover{
-    background: #ff3300;
-}
-
-/*
-.swim::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #ffee10;
-    border-radius: 100%;
-    transition: .5s;
-    }
-.cycling::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #ffee10;
-    border-radius: 100%;
-    transition: .5s;
-    }
-
-  .table-tennis::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #ffee10;
-    border-radius: 100%;
-    transition: .5s;
-    }
-    /*.swim:hover:before {
-     transform: scale(1.1);
-     box-shadow: (0 0 1em #ffee10);
-     display: block;
-    }
-    .cycling:hover:before {
-     transform: scale(1.1);
-     box-shadow: (0 0 1em #ffee10);
-     display: block;
-    }
-    .table-tennis:hover:before {
-     transform: scale(1.1);
-     box-shadow: (0 0 1em #ffee10);
-     display: block;
-    }*/
-
+.swim img, .cycling img, .table-tennis img {
+  display: block;
+  width: 100%;
+  height: auto; }
 
 /* CSS Styling of the banners "Contact" "About Me" Hobbies" along with Animation */
+.left-banner {
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.4em;
+  font-weight: 500;
+  letter-spacing: 1.5px;
+  color: #ffdc2a;
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
+  line-height: 1.75;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background: linear-gradient(90deg, #000, #CA870A, #000);
+  animation: animate 3s linear infinite; }
 
-
-.left-banner{
-    position: relative;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 1.4em;
-    font-weight: 500;
-    letter-spacing: 1.5px;
-    color: #ffdc2a;
-    text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
-    line-height: 1.75;
-    overflow: hidden;
-    background-repeat: no-repeat;
-    background: linear-gradient(90deg, #000, #CA870A , #000);
-    animation: animate 3s linear infinite;
-
-}
-
-@keyframes animate 
-{
-  0%
-  {
-    background-position: -50000%;
-  } 
-  25%
-  {
-    background-position: -25000%;
-  }
-  50%
-  {
-    background-position: 0%;
-  }
-  
-  75%
-  {
-    background-position: 5000%;
-  }
-  100%
-  {
-    background-position: 50000%;
-  }  
-}
- 
+@keyframes animate {
+  0% {
+    background-position: -50000%; }
+  25% {
+    background-position: -25000%; }
+  50% {
+    background-position: 0%; }
+  75% {
+    background-position: 5000%; }
+  100% {
+    background-position: 50000%; } }
 /* Css Styling of the Right Section of the CV - Self, Social, Education ,Experience and Reference */
-
 .wrapper-right {
-    grid-column: 3/4;
-    display: grid;
-    grid-template-rows: 25% repeat(3, auto);
-}
+  grid-column: 3/4;
+  display: grid;
+  grid-template-rows: repeat(4, auto); }
 
 /*Dividing the Self Section and Social Section into grids */
-
 .introduction {
-    display: grid;
-    grid-template-columns: auto auto;
-}
+  display: grid;
+  grid-template-columns: 1.7fr 2fr; }
 
 /* Css Styling of the Right Section of the CV - Section Self */
+.self {
+  display: grid;
+  justify-self: center;
+  align-self: center; }
 
-.self{
-   display:grid;
-   justify-self: center;
-   align-self: center;
-}
-.self .self-inner >h1{
-    text-transform: uppercase;
-    font-size: 2.7em;
-    font-weight: 500;
-    letter-spacing: .5px;
-    line-height: 1.5em;
-    color: #ffbf1c;
-    display: none;
-}
-.self .self-inner >h2{
-    text-transform: uppercase;
-    font-size: 2.7em;
-    font-weight: 500;
-    letter-spacing: 1px;
-    line-height: 1.5em;
-    margin-left: 5%;
-    color: #000;
-    display: none;
-}
+.self .self-inner > h1 {
+  text-transform: uppercase;
+  font-size: 2.7em;
+  font-weight: 500;
+  letter-spacing: .5px;
+  line-height: 1.5em;
+  color: #ffbf1c;
+  display: none; }
 
- .self-inner .name-2{
-   font-size: 1.2em  !important;
-   font-weight: 550  !important;
-   line-height: 1.5em !important;
-   display: none;
- }
+.self .self-inner > h2 {
+  text-transform: uppercase;
+  font-size: 2.7em;
+  font-weight: 500;
+  letter-spacing: 1px;
+  line-height: 1.5em;
+  margin-left: 5%;
+  color: #000;
+  display: none; }
 
- .self-inner .name-2 span{
-    text-decoration: underline !important;
-}
+.self-inner .name-2 {
+  font-size: 1.2em  !important;
+  font-weight: 550  !important;
+  line-height: 1.5em !important;
+  display: none; }
+
+.self-inner .name-2 span {
+  text-decoration: underline !important; }
 
 /* Css Styling of the Right Section of the CV - Section Social */
-
 /* Positioning and Aligning Social Buttons Vertically */
-
-
 /*Sass nesting code for Social Section 
 
 .social ul {
@@ -541,140 +251,118 @@ footer {
 
 
 } */
-
-.social{
-    display: none;
-}
 .social ul {
-   list-style: none;
-   position: relative;
-   top: 5%;
-   margin-left: 10%;
-   padding: 0;
-   display: flex;
-}
+  list-style: none;
+  position: relative;
+  top: 5%;
+  margin-left: 10%;
+  padding: 0;
+  display: flex; }
 
 .social ul li {
-    list-style: none;
-    padding: 0;
-    margin-left: 5.5%;
-} 
+  list-style: none;
+  padding: 0;
+  margin-left: 5.5%; }
 
 /*Basic Styling of the Social buttons */
-
-.social li a{
-    color:rgba(38, 38, 38,.85);
-    background-color: rgba(255,191,28,.8);
-    width: 112%;
-    height: 112%;
-    display:block;
-    text-align: center;
-    transform: rotate(-20deg) skew(2deg);
-    transition: .5s;
-    box-shadow: -.5em .5em .5em rgba(0,0,0,.5);
-}
+.social li a {
+  color: rgba(38, 38, 38, 0.85);
+  background-color: rgba(255, 191, 28, 0.8);
+  width: 112%;
+  height: 112%;
+  display: block;
+  text-align: center;
+  transform: rotate(-20deg) skew(2deg);
+  transition: .5s;
+  box-shadow: -0.5em 0.5em 0.5em rgba(0, 0, 0, 0.5); }
 
 /*Creating styles  of the Social buttons on HOVER*/
-
-.social li a:hover{
-    transition: all .5s ease-out;
-    box-shadow: -.9em .9em .9em rgba(0,0,0,.5);
-    transform: scale(1.2) rotate(-20deg) skew(2deg) translate(-5%, -5%);
-}
+.social li a:hover {
+  transition: all .5s ease-out;
+  box-shadow: -0.9em 0.9em 0.9em rgba(0, 0, 0, 0.5);
+  transform: scale(1.2) rotate(-20deg) skew(2deg) translate(-5%, -5%); }
 
 /* Creating the side frames of the Social buttons */
+.social li a:before {
+  content: '';
+  position: absolute;
+  background: #b1b1b1;
+  top: .25em;
+  left: -.4em;
+  width: .4em;
+  height: 100%;
+  transform: rotate(0deg) skewY(-45deg);
+  transition: .5s; }
 
-.social li a:before{
-    content: '';
-    position: absolute;
-    background: #b1b1b1;
-    top: .25em;
-    left: -.4em;
-    width: .4em;
-    height: 100%;
-    transform: rotate(0deg) skewY(-45deg);
-    transition: .5s;
-}
+.social li a:after {
+  content: '';
+  position: absolute;
+  background: #b1b1b1;
+  bottom: -.3em;
+  left: -.1em;
+  width: 100%;
+  height: .4em;
+  transform: rotate(0deg) skewX(-45deg);
+  transition: .5s; }
 
-.social li a:after{
-    content: '';
-    position: absolute;
-    background: #b1b1b1;
-    bottom: -.3em;
-    left: -.1em;
-    width: 100%;
-    height: .4em;
-    transform: rotate(0deg) skewX(-45deg);
-    transition: .5s;
-}
-.social li a i{
-    margin-top:.1em;
-}
+.social li a i {
+  margin-top: .1em; }
+
 /*Changing text color of the Social buttons on hover */
+.social li a i:hover {
+  color: #fff; }
 
-.social li a i:hover{
-    color: #fff;
-}
 /*Changing background color of the Social buttons on hover */
+.social ul li:nth-child(1) a:hover {
+  background: #1ab7ea; }
 
-.social ul li:nth-child(1) a:hover{
-    background: #1ab7ea;
-}
-.social ul li:nth-child(2) a:hover{
-    background: #55acee;
-}
-.social ul li:nth-child(3) a:hover{
-    background: #0077B5;
-}
-.social ul li:nth-child(4) a:hover{
-    background: #02b875;
-}
-.social ul li:nth-child(5) a:hover{
-    background: #3aaf85;
-}
-.social ul li:nth-child(6) a:hover{
-    background: #ff3300;
-}
+.social ul li:nth-child(2) a:hover {
+  background: #55acee; }
+
+.social ul li:nth-child(3) a:hover {
+  background: #0077B5; }
+
+.social ul li:nth-child(4) a:hover {
+  background: #02b875; }
+
+.social ul li:nth-child(5) a:hover {
+  background: #3aaf85; }
+
+.social ul li:nth-child(6) a:hover {
+  background: #ff3300; }
 
 /* Css Styling of the Right Section of the CV - Section-Education, Experience and Reference*/
+.heading i {
+  color: #ffbf1c;
+  margin-right: 5%; }
 
-.heading i{
-    color: #ffbf1c;
-    margin-right: 5%;
-}
+.heading h2 {
+  text-transform: uppercase;
+  font-size: 1.4em;
+  font-weight: 500;
+  letter-spacing: .5px;
+  color: #000;
+  line-height: 1.5em; }
 
-.heading h2{
-    text-transform: uppercase;
-    font-size: 1.4em;
-    font-weight: 500;
-    letter-spacing: .5px;
-    color: #000;
-    line-height: 1.5em;
-}
-
-.heading hr { 
+.heading hr {
   display: block;
   margin: 1% auto 5% auto;
   border-style: solid;
   border-width: 1.5px;
-  color: #ffbf1c;
-}
+  color: #ffbf1c; }
 
 /* Css Styling of the Right Section of the CV - Section-Education */
-
 .education {
-    display: grid;
-    grid-template-rows: 20% repeat(2,auto);
-
-}
+  display: grid;
+  grid-template-rows: 20% repeat(2, auto); }
 
 .experience {
-    display: grid;
-    grid-template-rows: 20% repeat(3,auto);
+  display: grid;
+  grid-template-rows: 20% repeat(3, auto); }
 
-}
 .content {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-gap: 3px;
-}
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 3px; }
+
+/*# sourceMappingURL=style.css.map */
