--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,12 @@
+$white: #FFF;
+$black: #000;
+
+$left-section-background: #ffbf1c;
+$hobbies-onclick-color: #ffee10;
+$banner-left-text: #ffdc2a;
+
+$font-stack-primary: "Roboto", sans-serif;
+
 body {
     width: 55%;
     margin: auto;
@@ -15,7 +24,7 @@ body {
     grid-column: 1/2;
     display: grid;
     grid-template-rows: repeat(4, auto);
-    background: #ffbf1c;
+    background: $left-section-background;
 }
 
 /* CSS Styling of the background Profile Photo Section of the CV */
@@ -44,7 +53,7 @@ header .profile>span{
     position: absolute;
     width: 229px;
     padding:1.75% 0 1.75% 0;
-    background: #ffbf1c;
+    background: $left-section-background;
 }
 
 .photo.avatar img{
@@ -164,12 +173,12 @@ footer {
 /* new Class is used in toggleClass - Jquery . The stylings of hobby icons are changed on click*/
 
 .new-hobbies {
-    background: #ffee10;
+    background: $hobbies-onclick-color;
     transform: scale(1.3) rotateY(540deg);
     transition: all 2s ease-in;
     border: solid .21em #333;
-    box-shadow: (0 0 1em #ffee10);
-    text-shadow: (0 0 1em #ffee10);
+    box-shadow: (0 0 1em $hobbies-onclick-color);
+    text-shadow: (0 0 1em $hobbies-onclick-color);
     border-radius: 100%;
 }
 .reverse-hobbies {
@@ -195,8 +204,8 @@ footer {
     font-size: 1.4em;
     font-weight: 500;
     letter-spacing: 1.5px;
-    color: #ffdc2a;
-    text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
+    color: $banner-left-text;
+    text-shadow: -1px 0 1px black, 0 1px 1px $black, 1px 0 1px black, 0 -1px 1px $black;
     line-height: 1.75;
     overflow: hidden;
     background-repeat: no-repeat;
@@ -247,155 +256,130 @@ footer {
 
 /* Css Styling of the Right Section of the CV - Section Self */
 
-.self{
-   display:grid;
-   justify-self: center;
-   align-self: center;
-}
-.self .self-inner >h1{
-    text-transform: uppercase;
-    font-size: 2.7em;
-    font-weight: 500;
-    letter-spacing: .5px;
-    line-height: 1.5em;
-    color: #ffbf1c;
-    display: none;
-}
-.self .self-inner >h2{
-    text-transform: uppercase;
-    font-size: 2.7em;
-    font-weight: 500;
-    letter-spacing: 1px;
-    line-height: 1.5em;
-    margin-left: 5%;
-    color: #000;
-    display: none;
-}
+.self {
+      display:grid;
+      justify-self: center;
+      align-self: center;
 
- .self-inner .name-2{
-   font-size: 1.2em  !important;
-   font-weight: 550  !important;
-   line-height: 1.5em !important;
-   display: none;
- }
+      .self-inner {
+          h1 {
+             text-transform: uppercase;
+             font-size: 2.7em;
+             font-weight: 500;
+             letter-spacing: .5px;
+             line-height: 1.5em;
+             color: $left-section-background;
+             display: none;
+            }
 
- .self-inner .name-2 span{
-    text-decoration: underline !important;
-}
+          h2 {
+             text-transform: uppercase;
+             font-size: 2.7em;
+             font-weight: 500;
+             letter-spacing: 1px;
+             line-height: 1.5em;
+             margin-left: 5%;
+             color: #000;
+             display: none;
+             }
 
-/* Css Styling of the Right Section of the CV - Section Social */
+     .name-2 {
+             font-size: 1.2em  !important;
+             font-weight: 550  !important;
+             line-height: 1.5em !important;
+             display: none;
+  
 
-/* Positioning and Aligning Social Buttons Vertically */
+          span {
+                text-decoration: underline !important;
+               }
 
-
-/*Sass nesting code for Social Section 
-
-.social ul {
-    list-style: none;
-    position: relative;
-    top: 5%;
-    margin-left: 7%;
-    padding: 0;
-    display: flex;
-
-    li {
-        list-style: none;
-        padding: 0;
-        margin-left: 7%;
-
-        a {
-            color:rgba(38, 38, 38,.85);
-            background-color: rgba(255,191,28,.8);
-            width: 135%;
-            height: 120%;
-            display:block;
-            text-align: center;
-            transform: rotate(-20deg) skew(2deg);
-            transition: .5s;
-            box-shadow: -.5em .5em .5em rgba(0,0,0,.5);
-
-            i {
-                margin-top:.1em;
-              }
-
-            i:hover{
-                color: #fff;
               }
 
             }
+          }
+
+// Css Styling of the Right Section of the CV - Section Social 
+
+//Positioning and Aligning Social Buttons Vertically 
 
 
-} */
+
 .social ul {
-   list-style: none;
-   position: relative;
-   top: 5%;
-   margin-left: 10%;
-   padding: 0;
-   display: flex;
-}
+           list-style: none;
+           position: relative;
+           top: 5%;
+           margin-left: 10%;
+           padding: 0;
+           display: flex;
 
-.social ul li {
-    list-style: none;
-    padding: 0;
-    margin-left: 5.5%;
-} 
+           li {
+              list-style: none;
+              padding: 0;
+              margin-left: 5.5%;
 
-/*Basic Styling of the Social buttons */
+//Basic Styling of the Social buttons 
 
-.social li a{
-    color:rgba(38, 38, 38,.85);
-    background-color: rgba(255,191,28,.8);
-    width: 112%;
-    height: 112%;
-    display:block;
-    text-align: center;
-    transform: rotate(-20deg) skew(2deg);
-    transition: .5s;
-    box-shadow: -.5em .5em .5em rgba(0,0,0,.5);
-}
+              a {
+                color:rgba(38, 38, 38,.85);
+                background-color: rgba(255,191,28,.8);
+                width: 112%;
+                height: 112%;
+                display:block;
+                text-align: center;
+                transform: rotate(-20deg) skew(2deg);
+                transition: .5s;
+                box-shadow: -.5em .5em .5em rgba(0,0,0,.5);
+                
 
-/*Creating styles  of the Social buttons on HOVER*/
+              //Creating styles  of the Social buttons on HOVER
 
-.social li a:hover{
-    transition: all .5s ease-out;
-    box-shadow: -.9em .9em .9em rgba(0,0,0,.5);
-    transform: scale(1.2) rotate(-20deg) skew(2deg) translate(-5%, -5%);
-}
+                 &:hover {
+                         transition: all .5s ease-out;
+                         box-shadow: -.9em .9em .9em rgba(0,0,0,.5);
+                         transform: scale(1.2) rotate(-20deg) skew(2deg) translate(-5%, -5%);
+                         }
 
-/* Creating the side frames of the Social buttons */
+             // Creating the side frames of the Social buttons 
 
-.social li a:before{
-    content: '';
-    position: absolute;
-    background: #b1b1b1;
-    top: .25em;
-    left: -.4em;
-    width: .4em;
-    height: 100%;
-    transform: rotate(0deg) skewY(-45deg);
-    transition: .5s;
-}
+               &:before {
+                        content: '';
+                        position: absolute;
+                        background: #b1b1b1;
+                        top: .25em;
+                        left: -.4em;
+                        width: .4em;
+                        height: 100%;
+                        transform: rotate(0deg) skewY(-45deg);
+                        transition: .5s;
+                        }
 
-.social li a:after{
-    content: '';
-    position: absolute;
-    background: #b1b1b1;
-    bottom: -.3em;
-    left: -.1em;
-    width: 100%;
-    height: .4em;
-    transform: rotate(0deg) skewX(-45deg);
-    transition: .5s;
-}
-.social li a i{
-    margin-top:.1em;
-}
-/*Changing text color of the Social buttons on hover */
+                &:after {
+                        content: '';
+                        position: absolute;
+                        background: #b1b1b1;
+                        bottom: -.3em;
+                        left: -.1em;
+                        width: 100%;
+                        height: .4em;
+                        transform: rotate(0deg) skewX(-45deg);
+                        transition: .5s;
+                        }
 
-.social li a i:hover{
-    color: #fff;
-}
+                        i {
+                           margin-top:.1em;
+                        
+                           //Changing text color of the Social buttons on hover 
+
+                           &:hover {
+                                   color: $white;
+                                   }
+                          }
+                  }
+
+                }
+
+              }
 /*Changing background color of the Social buttons on hover */
 
 .social ul li:nth-child(1) a:hover{
@@ -417,31 +401,35 @@ footer {
     background: #ff3300;
 }
 
-/* Css Styling of the Right Section of the CV - Section-Education, Experience and Reference*/
+//Css Styling of the Right Section of the CV - Section-Education, Experience and Reference
 
-.heading i{
-    color: #ffbf1c;
-    margin-right: 5%;
-}
+.heading {
 
-.heading h2{
-    text-transform: uppercase;
-    font-size: 1.4em;
-    font-weight: 500;
-    letter-spacing: .5px;
-    color: #000;
-    line-height: 1.5em;
-}
+         i {
+             color: $left-section-background;
+             margin-right: 5%;
+            }
 
-.heading hr { 
-  display: block;
-  margin: 1% auto 5% auto;
-  border-style: solid;
-  border-width: 1.5px;
-  color: #ffbf1c;
-}
+        h2 {
+             text-transform: uppercase;
+             font-size: 1.4em;
+             font-weight: 500;
+             letter-spacing: .5px;
+             color: #000;
+             line-height: 1.5em;
+            }
 
-/* Css Styling of the Right Section of the CV - Section-Education */
+        hr { 
+             display: block;
+             margin: 1% auto 5% auto;
+             border-style: solid;
+             border-width: 1.5px;
+             color: #ffbf1c;
+          }
+
+        }
+
+// Css Styling of the Right Section of the CV - Section-Education 
 
 .education {
     display: grid;
